Finished cards in Civil Rights

--- a/src/app/assets/styles.css
+++ b/src/app/assets/styles.css
@@ -122,7 +122,9 @@ body {
 
 /* Civil Rights */
 
-#civil-rights-container {}
+#civil-rights-container {
+    margin: 0;
+}
 
 /* Market Competition */
 
