--- a/src/app/assets/styles.css
+++ b/src/app/assets/styles.css
@@ -144,3 +144,17 @@ body {
 /* ----- State Governance */
 
 #institutional-stability-container {}
+
+
+/* Home */
+
+#main-container {
+    width: 100;
+    height: 100;
+}
+
+.home-half {
+    width: 50;
+    height: 50;
+    background-color: rebeccapurple;
+} 
