--- a/src/app/assets/styles.css
+++ b/src/app/assets/styles.css
@@ -148,13 +148,38 @@ body {
 
 /* Home */
 
-#main-container {
-    width: 100;
-    height: 100;
+#home-container {
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#sg-link,
+#freedom-link {
+    display: inline-block;
+    margin: 10px;
+    padding: 10px;
+    color: #fff;
+    text-decoration: none;
+}
+
+#freedom-home {
+    background: linear-gradient(to right, #e3f4fa, #b7eaff);
+}
+
+#sg-home {
+    background: linear-gradient(to right, #ec2536, #ff6565);
+}
+
+.home-half>* {
+    margin: 1rem;
+    text-decoration: none;
 }
 
 .home-half {
     width: 50;
-    height: 50;
-    background-color: rebeccapurple;
-} 
+    height: 100;
+}
